@@ -2,16 +2,18 @@ package edu.stanford.irt.laneweb.search.saxstrategy;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.xml.sax.SAXException;
 import org.xml.sax.helpers.AttributesImpl;
 
 import edu.stanford.irt.cocoon.xml.XMLConsumer;
-import edu.stanford.irt.laneweb.LanewebException;
 import edu.stanford.irt.laneweb.util.XMLUtils;
 import edu.stanford.irt.solr.Image;
 
 public class SolrAdminImageSearchSAXStrategy extends SolrImageSearchSAXStrategy {
+
+    private static final String UTF_8 = StandardCharsets.UTF_8.name();
 
     @Override
     protected void generateImages(final XMLConsumer xmlConsumer, final Image image, final int imageNumber)
@@ -39,13 +41,13 @@ public class SolrAdminImageSearchSAXStrategy extends SolrImageSearchSAXStrategy 
         try {
             atts = new AttributesImpl();
             atts.addAttribute(EMPTY, HREF, HREF, CDATA,
-                    "/secure/image/update?id=" + URLEncoder.encode(imageId, "UTF-8"));
+                    "/secure/image/update?id=" + URLEncoder.encode(imageId, UTF_8));
             atts.addAttribute(EMPTY, CLASS, CLASS, CDATA, "imagedeco-admin");
             XMLUtils.startElement(xmlConsumer, XHTML_NS, "a", atts);
             XMLUtils.data(xmlConsumer, imageId.substring(imageId.lastIndexOf('/') + 1));
             endAnchor(xmlConsumer);
         } catch (UnsupportedEncodingException e) {
-            throw new LanewebException(e);
+            throw new SAXException(e);
         }
         endDiv(xmlConsumer);
         endLi(xmlConsumer);
